tests/integration/errors/test_struct_field_type_mismatch.sn
# Error test: struct literal with type mismatch in field initializer

struct Point =>
    x: double
    y: double

fn main(): void =>
    # This should fail - string value for double field
    var p: Point = Point { x: "wrong", y: 1.0 }
    print("Should not compile\n")
